# project_template

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
lib/: CMakeLists.txt
project_opencv/: CMakeLists.txt
src/: CMakeLists.txt
